set the very basic html form

--- a/index.html
+++ b/index.html
@@ -15,7 +15,42 @@
     <title>Cats, Coffee, Coders Dash</title>
 </head>
 <body>
+    <h1>Cats</h1>
+    <section>
+      <p>Weather For:</p>
+      <p id="city"></p>
+      <p>Temperature</p>
+      <p id="temp"></p>
+      <p>Feels Like:</p>
+      <p id="feelsLike"></p>
+      <p>Weather:</p>
+      <p id="weather"></p>
 
     
+        <form>
+            <input type='text'
+            placeholder="City Weather Search"/>
+            <input type='submit' value='Get Weather Info'/>
+        </form>
+    </section>
+
+    <h1>Coffee</h1>
+    <section>
+      <p>Weather For:</p>
+      <p id="city"></p>
+      <p>Temperature</p>
+      <p id="temp"></p>
+      <p>Feels Like:</p>
+      <p id="feelsLike"></p>
+      <p>Weather:</p>
+      <p id="weather"></p>
+
+    
+        <form>
+            <input type='text'
+            placeholder="City Weather Search"/>
+            <input type='submit' value='Get Weather Info'/>
+        </form>
+    </section>
 </body>
 </html>
