work on the coffee and cocktail api

--- a/index.html
+++ b/index.html
@@ -38,18 +38,24 @@
 
     
     <section>
-        <h1>Coffee</h1>
+        <h1>Need a Coffee Break?(Or maybe something stronger?)</h1>
       <p>Name</p>
-      <p id=""></p>
-      <p>Recipe</p>
-      <p id=""></p>
+      <p id="name"></p>
+      <p>Thumbnail</p>
+      <p id="thumbNail"></p>
+      <p>Instructions</p>
+      <p id="instructions"></p>
 
     
         <form>
             <input type='text'
-            placeholder="Coffee"/>
-            <input type='submit' value='Get Coffee Recipe'/>
+            placeholder="Coffee/Cocktail"/>
+            <input type='submit' value='Get a drink'/>
+
         </form>
+        <ul id="list">
+
+        </ul>
     </section>
 </body>
 </html>
