render function puts curated api data on the page, needs reset button to do multiple searches

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     
     
     <div class="animalSerotonin">
+        <title>Serotonin </title>
         <section id="cats">
             <h1>Cats</h1>
             <img id="catPic"></img>
