reset search and html works, work on the refinement of the search

--- a/index.html
+++ b/index.html
@@ -39,15 +39,8 @@
 
     
     <section>
-        <h1>Need a Coffee Break?(Or maybe something stronger?)</h1>
-      <p>Name</p>
-      <p id="name"></p>
-      <p>Thumbnail</p>
-      <p id="thumbNail"></p>
-      <p>Instructions</p>
-      <p id="instructions"></p>
-
-    
+        <h1>Coder Cafe</h1>
+        <h3>Need a Coffee Break?(Or maybe something stronger?)</h3>
         <form>
             <input type='text'
             placeholder="Coffee/Cocktail"/>
