--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
                         <ul id="list"></ul>
                     </div>
             </div>
+            <div class="row">
+                <div class="card">
+                    <div class="card-header">
+                    <h1>Coder Cafe</h1>
+                    </div>
+                    <div class="card-body">
+                        <p>
+                            Need a Coffee Break?(Or maybe something stronger?)
+                        </p>
+                        <form>
+                            <input type='text'
+                            placeholder="Coffee/Cocktail"/>
+                            <input type='submit' value='Get a drink'/>
+                
+                        </form>
+                        <ul id="list"></ul>
+                    </div>
+            </div>
 
 
 
