changed some frontend text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <nav>
             <div class="title">
-                <h1>Coder Cafe</h1>
+                <h1>Coder Break Cafe</h1>
             </div>
             <div class="navBarLinks">
                 <ul>
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="card">
                     <div class="card-header">
-                        <h1>Coder Cafe</h1>
+                        <h1>Drink Bar</h1>
                     </div>
                     <div class="card-body">
                         <p>
