animal card now fits with one sreen for both cats and dogs, the cards are z indexed to the nav bar, and the navbar is opaque

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="navBarLinks">
                 <ul>
-                    <li><a href=#>About</a></li>
+                    <li><a href="#about">About</a></li>
                     <li><a href=#>Drink Bar</a></li>
                     <li><a href=#>Extra Shot of Serotonin</a></li>
                     <li><a href=#> Sign-in</a></li>
@@ -38,8 +38,8 @@
     </header>
 
     <main>
-        <section class="about">
-
+        <section class="about" id="about">
+            
             <h2>ABOUT</h2>
             <p class="text">
                 Let's be real, coding is fun, but it can be hard. This is your Daily Digital Coding Break. Here you can
@@ -75,9 +75,10 @@
                     </div>
                     <div class="card-body">
                         <div id="animalSerotonin">
-                            <h1>Cats</h1>
-                            <img id="catPic"></img>
+                            <h1>Are you a cat person or a dog person?</h1>
+                            <img id="animalPic"></img>
                             <button id="getCatBtn">Cat</button>
+                            <button id="getDogBtn">Dog</button>
                         </div>
 
                     </div>
@@ -134,7 +135,7 @@
         <ul id="list">
 
         </ul> -->
-    </section>
+    <!-- </section> -->
 </body>
 
 </html>
