--- a/index.html
+++ b/index.html
@@ -87,7 +87,22 @@
             </div>
 
 
-
+            <section>
+                <h1> Click for the inspirational quote of the day!</h1>
+                <main>
+                    <p id="quote"></p>
+                    <p id="author"></p>
+                    <p id="category"></p>
+                </main>
+                <button id="getQuote">Get Inspired!</button>
+                <!-- <form id="quote">
+                    <input type='text'
+                    placeholder="get inspired"/>
+                    <input type='submit' value='quote'/>
+        
+                </form> -->
+        
+            </section>
 
 
 
